--- a/static/less/builder.less
+++ b/static/less/builder.less
@@ -1165,7 +1165,7 @@ button.preview {
 
 .sections-container {
   position: relative;
-  width: 75%;
+  width: 100%;
   float: left;
   overflow: hidden;
   padding: 8px 0 0;
@@ -1176,7 +1176,7 @@ button.preview {
   float: left;
   width: 90%;
   margin: 0 40px;
-  padding: 0 10px;
+  padding: 0;
   overflow: auto;
 }
 
